# agentbench

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README_CN.md  SECURITY.md  action.yml  biome.json  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json  vitest.workspace.ts
.changeset/: config.json
.claude/workflows/: v0.3.0-implementation.js
.github/workflows/: agentbench-ci.yml  ci.yml  example-agentbench-action.yml  release.yml  star-chart.yml
apps/cli/: package.json  tsconfig.json  tsup.config.ts
apps/web/: .env.example  Dockerfile  next.config.ts  package.json  tsconfig.json  vitest.config.ts
assets/: star-history-2026710.csv  star-history.csv
docs/: API_REFERENCE.md  ARCHITECTURE.md  BEST_PRACTICES.md  CLI_REFERENCE.md  CONTRIBUTING.md  DEPLOYMENT.md  FAQ.md  GETTING_STARTED.md  GLOSSARY.md  INDEX.md  PRODUCT_DESIGN_v0.3.0.md  ROADMAP.md  SCHEMA.md  SDK_GUIDE.md  TASKS.md  agent-testing-anti-patterns.md  agent-testing-pyramid.md  article-why-agent-testing.md
docs/cookbook/: agent-ab-testing.md  catching-prompt-regressions.md  cost-budget-enforcement.md  model-migration-testing.md  safety-testing.md
docs/core-concepts/: assertions.md  coverage.md  (+4 more)
sdk-python/: README.md  pyproject.toml
sdk-python/agentbench/: __init__.py  anthropic_wrapper.py  assertions.py  cli.py  client.py  openai_wrapper.py  runner.py  tracer.py  types.py
sdk-python/tests/: __init__.py  test_assertions.py  test_runner.py  test_tracer.py
vscode-extension/: README.md  package.json
(+317 files in other folders)
